--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,7 +39,8 @@ requirements:
 
 test:
   commands:
-    - $PREFIX/bin/applgrid-convert
+    - which $PREFIX/bin/applgrid-convert
+    - which applgrid-convert
     - applgrid-convert
 
 about:
