--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,6 +1,18 @@
+c_stdlib:
+  - sysroot                    # [linux]
+  - macosx_deployment_target   # [osx]
+c_stdlib_version:              # [unix]
+  - 2.17                       # [linux]
+  - 11.0                       # [osx]  
+
 root:
   - 6.32
   - 6.34
 
-packages:
+libtorch:
+  - 2.6.0
+  - 2.7.0
+
+zip_keys:
+  - libtorch
   - root
