--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,6 @@
 /build_artifacts
 
 *.pyc
-!Makefile
-!.github/**
+
+# Rattler-build's artifacts are in `output` when not specifying anything.
+/output
