--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,14 +38,14 @@ requirements:
     - automake
 
   host:
-    - root
+    - root=={{ root }}
     - hoppet
     - fastnlo
     - lhapdf>5
     - zlib
 
   run:
-    - root
+    - root=={{ root }}
     - hoppet
     - fastnlo
     - lhapdf>5
