--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,21 +40,21 @@ requirements:
   host:
     - root=={{ root }}
     - hoppet
-    - fastnlo root{{ root.replace('.', '') }}
+    - fastnlo * root{{ root.replace('.', '') }}
     - lhapdf>5
     - zlib
 
   run:
     - root=={{ root }}
     - hoppet
-    - fastnlo root{{ root.replace('.', '') }}
+    - fastnlo * root{{ root.replace('.', '') }}
     - lhapdf>5
     - zlib
 
 test:
   requires:
     - root=={{ root }}
-    - fastnlo root{{ root.replace('.', '') }}
+    - fastnlo * root{{ root.replace('.', '') }}
   commands:
     - echo "Running.. $(which applgrid-convert)"
     - applgrid-convert
