--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,23 +38,23 @@ requirements:
     - automake
 
   host:
-    - root {{ root }}.*
+    # - root {{ root }}.*
     - hoppet
-    - fastnlo * root{{ root.replace('.', '') }}
+    - fastnlo #* root{{ root.replace('.', '') }}
     - lhapdf>5
     - zlib
 
   run:
-    - root {{ root }}.*
+    # - root {{ root }}.*
     - hoppet
-    - fastnlo * root{{ root.replace('.', '') }}
+    - fastnlo #* root{{ root.replace('.', '') }}
     - lhapdf>5
     - zlib
 
 test:
-  requires:
-    - root {{ root }}.*
-    - fastnlo * root{{ root.replace('.', '') }}
+  # requires:
+    # - root {{ root }}.*
+    # - fastnlo * root{{ root.replace('.', '') }}
   commands:
     - echo "Running.. $(which applgrid-convert)"
     - applgrid-convert
