--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,10 +27,7 @@ source:
 
 requirements:
   build:
-    - {{ compiler('gfortran') }}   # GNU Fortran compiler
-    - {{ compiler('c') }}          # GNU C compiler
-    - {{ compiler('cxx') }}        # GNU C++ compiler
-
+    - root {{ root }}.*
     - cmake                        # Build system
     - make                         # Make utility
     - libtool
